example-app-neg/apple.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=apple"
          imagePullPolicy: Always
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: apple
  ports:
    - port: 80
      targetPort: 5678 # Default port for image
      protocol: TCP
  type: ClusterIP
