example-app-neg/banana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"
          imagePullPolicy: Always
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: banana
  ports:
    - port: 80
      targetPort: 5678 # Default port for image
      protocol: TCP
  type: ClusterIP
